--- a/Sources/Contents/Resources/D-LinkUtility/MiniTaskUSB-DWA160.app/Contents/Info.plist
+++ b/Sources/Contents/Resources/D-LinkUtility/MiniTaskUSB-DWA160.app/Contents/Info.plist
@@ -2,45 +2,31 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>BuildMachineOSBuild</key>
-	<string>10K549</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>MiniTaskUSB-DLinkUtility</string>
+	<string>MiniTaskUSB-DWA160</string>
+        <key>CFBundleIconFile</key>
+	<string>AppIcon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.Ralink.RaConfig2800.MiniTaskUSBD-LinkUtility</string>
+	<string>com.Ralink.RaConfig2800.MiniTaskUSBDWA160</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>MiniTaskUSB-D-Link Utility</string>
+	<string>MiniTaskUSB-DWA160</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>2.3.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>2.3.0</string>
-	<key>DTCompiler</key>
-	<string>4.2</string>
-	<key>DTPlatformBuild</key>
-	<string>10M2518</string>
-	<key>DTPlatformVersion</key>
-	<string>PG</string>
-	<key>DTSDKBuild</key>
-	<string>9L31a</string>
-	<key>DTSDKName</key>
-	<string>macosx10.5</string>
-	<key>DTXcode</key>
-	<string>0400</string>
-	<key>DTXcodeBuild</key>
-	<string>10M2518</string>
 	<key>LSUIElement</key>
-	<true/>
+	<string>1</string>
 	<key>NSJavaNeeded</key>
 	<string>NO</string>
 	<key>NSJavaPath</key>
 	<array>
-		<string>MiniTaskUSB-D-LinkUtility.jar</string>
+		<string>MiniTaskUSB-DWA160.jar</string>
 	</array>
 	<key>NSJavaRoot</key>
 	<string>Contents/Resources/Java</string>
