--- a/Sources/Contents/Resources/PlistEdit.app/Contents/Info.plist
+++ b/Sources/Contents/Resources/PlistEdit.app/Contents/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleIconFile</key>
 	<string>applet</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.ScriptEditor.id.PlistEdit</string>
+	<string>com.apple.ScriptEditor.id.Plist-Edit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>PlistEdit</string>
+	<string>Plist-Edit</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -68,7 +68,7 @@
 		<key>positionOfDivider</key>
 		<real>443</real>
 		<key>savedFrame</key>
-		<string>503 321 1206 678 0 0 1920 1055 </string>
+		<string>451 249 1469 678 0 0 1920 1055 </string>
 		<key>selectedTab</key>
 		<string>description</string>
 	</dict>
